--- a/micro/client/template/user.html
+++ b/micro/client/template/user.html
@@ -1,4 +1,4 @@
-<p><a href="/tpl/logout/{{.Provider}}">logout</a></p>
+<p><a href="/api/tpl/logout/{{.Provider}}">logout</a></p>
 <p>Name: {{.Name}} [{{.LastName}}, {{.FirstName}}]</p>
 <p>Email: {{.Email}}</p>
 <p>NickName: {{.NickName}}</p>
