--- a/micro/client/template/ws.html
+++ b/micro/client/template/ws.html
@@ -7,7 +7,7 @@
 <!-- the messages will be shown here -->
 <pre id="output"></pre>
 <!-- import the iris client-side library for browser-->
-<script src="/tpl/iris-ws.js"></script>
+<script src="/api/iris-ws.js"></script>
 
 <script>
     var scheme = document.location.protocol == "https:" ? "wss" : "ws";
