--- a/micro/client/template/index.html
+++ b/micro/client/template/index.html
@@ -1,3 +1,3 @@
 {{range $key,$value:=.Providers}}
-    <p><a href="/tpl/auth/{{$value}}">Log in with {{index $.ProvidersMap $value}}</a></p>
+    <p><a href="/api/auth/{{$value}}">Log in with {{index $.ProvidersMap $value}}</a></p>
 {{end}}
