--- a/static/template/liov.html
+++ b/static/template/liov.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript"s>
+        window.onload = function () {
+            var divM = document.getElementById("click");
+            divM.onclick =function () {
+                console.log(1)
+                axios.get("http://hoper.xyz:8000",{
+                    headers: {
+                        'foo': 'bar'
+                    }
+                })
+            }
+        }
+
+    </script>
 </head>
 <body>
-<div>静态页</div>
+<div style="cursor:pointer" id="click">静态页</div>
 </body>
 </html>
