--- a/static/template/liov.html
+++ b/static/template/liov.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="text/javascript"s>
+    <script type="text/javascript">
         window.onload = function () {
             var divM = document.getElementById("click");
             divM.onclick =function () {
